  * release numbers follow "Semantic Versioning" https://semver.org


-------------------------------------------------------------------------------
??/??/?? IAlibay, HeetVekariya, marinegor, lilyminium, RMeli,
         ljwoods2, aditya292002, pstaerk, PicoCentauri, BFedder,
         tyler.je.reddy, SampurnaM, leonwehrhan, kainszs, orionarcher,
         yuxuanzhuang

 * 2.8.0

Fixes
 * Fix PSFParser error when encoutering string-like resids
 * (Issue #2053, Issue #4189 PR #4582)
 * Fix `MDAnalysis.analysis.align.AlignTraj` not accepting writer kwargs
   (Issue #4564, PR #4565)
 * Fix #4259 via removing argument `parallelizable` of `NoJump` transformation.
 * Fix doctest errors of analysis/pca.py related to rounding issues 
   (Issue #3925, PR #4377)
 * Convert openmm Quantity to raw value for KE and PE in OpenMMSimulationReader.
 * Atomname methods can handle empty groups (Issue #2879, PR #4529)
 * Add support for TPR files produced by Gromacs 2024.1 (PR #4523)
 * Remove mutable data from ``progressbar_kwargs`` argument in ``AnalysisBase.run()``
   (PR #4459)
 * Fix ChainReader `__repr__()` method when sub-reader is MemoryReader 
   (Issue #3349, PR #4407)
 * Fix bug in PCA preventing use of `frames=...` syntax (PR #4423)
 * Fix `analysis/diffusionmap.py` iteration through trajectory to iteration
   over `self._sliced_trajectory`, hence supporting
   `DistanceMatrix.run(frames=...)` (PR #4433)
 * Fix doctest errors of lib/picklable_file_io.py (Issue #3925, PR #4371)
 * Fix deploy action to use the correct version of the pypi upload action.
 * Fix groups.py doctests using sphinx directives (Issue #3925, PR #4374)

Enhancements
 * Add `analysis.DSSP` module for protein secondary structure assignment, based on [pydssp](https://github.com/ShintaroMinami/PyDSSP)
 * Added a tqdm progress bar for `MDAnalysis.analysis.pca.PCA.transform()`
   (PR #4531)
 * Improved performance of PDBWriter (Issue #2785, PR #4472)